@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6c81b923b5c889882d8f2567daff131d37d038a1 ChangeLog
+SHA1 ea82b43ce85c07bdaa36d76e81f3cc47f1e72115 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 ccc44e3ee26f5986737eab3b53cb7f8555acea68 META.yml
-SHA1 0090635b11c93eae2aace2c7b8b82e866a08cba7 Makefile.PL
+SHA1 9502584f2abf0b74948e492e3c564d0ad22458e2 META.yml
+SHA1 853b4e2248ae79c4aa24dbb07c98f3271391a055 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 757f8405065fb6398dd1a6c20f29ba971375537f bin/fullauto.pl
+SHA1 a6e007f1056d6fb4aa4e9d94707740c364f074a7 bin/fullauto.pl
 SHA1 e7597f2c7bab49174bbe597b575bc29f987af7f1 bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 79a291c18c3e47595ab53552428276df1276b5cc lib/Net/FullAuto.pm
+SHA1 c3c76a2644242102fd2072db241bf22ebc814761 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 deda24a859e130289ce8a886189a027999d924ae lib/Net/FullAuto/FA_Core.pm
+SHA1 99261f4908ce8cca6192817c05d9a1d5e4b25e4b lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSqfFaAAoJEBa/9Pad787E9L0H/1RVrWsdD/UFe41Uh9f3vhd+
-47z7lSIC67zcyFij0jxwJ+z7GC9+qBzd+qozSRBTkDIlGd7zuKkmTngZLZo5t69Q
-cwCfPNQ+uvJ0oDFQeCrqaaS5YUYCi1ykK9JQJENWwnDIOL1128LcnitocaeWY+vg
-fFlyouFZOHBenplu/9UE0c69ejAXN1paiR8jjZlNVaH6KCo7qVUiCI7Y6TCzKkUT
-/XWUKeZQqwIuAP7V3EUo8FRhTqzJpCe2WS0SZLt54shApimryqJEjKtX8E5ulBDE
-qxIw0gK7N/wjWKlRTKkMkGR8ZNeKqM10zJC9u7YxI2J0dzqCQXiq4UcpnCV9vRM=
-=YeqB
+iQEcBAEBAgAGBQJSrSUuAAoJEBa/9Pad787EqAcIALA6yc9L5ppjpvpTgbdc3sN2
+8LvxioWtGQJCzasyTqkMAPvehKQdwO+bhn8wekR4dllrIDCRKlJ77roiPB8wpj5Z
+9hIU7m7ocvhz2uLCnVFvcdgNVq1IXJMnl0Z3ovkrvvI5h8u1zrHO9q7Y6T0cJdJ6
+1CQEl7GCiTA6SVwYSJlhf03wyU2lxnP/YMU/6Qn4Z032TB5i795f3LychsQ8bIQW
+gdLW0IfVnv0y6SL1YRCs303PJ4LAOsgILkZY2JHgyO9jy7zt5MEQAP84pABW8EdO
+SjxTRZlykMeUs4jW+4OEObvnrT1oYylGIA804C7/WoX/X4DiUYLhqRj4ZMbUYww=
+=FAqN
 -----END PGP SIGNATURE-----
